--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 
+*.json
 .vs/seawatcher3000/FileContentIndex/5d9687d6-9ae3-4b13-9907-4d16e85fd89a.vsidx
 .vs/seawatcher3000/FileContentIndex/c1a787f2-60db-42d8-908a-96e825d8b376.vsidx
 .vs/slnx.sqlite
@@ -113,3 +114,5 @@ StyleCopReport.xml
 *.cache
 *.props
 *.json
+obj/seawatcher3000.csproj.nuget.g.props
+/obj
