--- a/seawatcher3000.csproj
+++ b/seawatcher3000.csproj
@@ -31,7 +31,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ML.OnnxRuntime.Gpu" Version="1.18.0" />
     <PackageReference Include="YoloV8.Gpu" Version="4.1.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="seaeyes_model_1.onnx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="test_image.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
